# tri_det

./: CMakeLists.txt  README.md
solar/: CMakeLists.txt
solar/include/modelinferce/detection/yolox/: yoloxDetect.cpp
solar/src/: detectthread.cpp  infra_detect.cpp  main.cpp  solar_utils.cpp  vis_detect.cpp
task/include/: algorithm.h  datatype.h  httpserver.h  infra_detect.h  resultPackage.h  vis_detect.h
task/include/DJI/: read_dji_thremal.h
task/include/exif/: exif.cpp
task/include/modelinferce/segmentation/u2net/: u2net.cpp
task2/include/: detectthread.h  solar_utils.h
task2/include/DJI/: read_dji_thremal.cpp
task2/include/modelinferce/detection/yolov5/: yolov5.cpp  yolov5.h
task2/include/modelinferce/detection/yolox/: yoloxDetect.h
task2/include/modelinferce/segmentation/u2net/: u2net.h
task2/src/: algorithm.cpp  httpserver.cpp  resultPackage.cpp
unite_sys/: CMakeLists.txt
unite_sys/inc/: CheckSysStatus.h  DetectTask.h  DllExport.h  DriverBase.h  DriverSolarM300.h  LogRecord.h  ManagerBase.h  RabbitMQClient.h  ShareStruct.h  SignalHandler.h  SneMinIOManager.h  SystemManager.h  cmdline.h
unite_sys/src/: CheckSysStatus.cpp  DetectTask.cpp  DllExport.cpp  DriverSolarM300.cpp  Main.cpp  SneMinIOManager.cpp  SystemManager.cpp
